# ShankarLohar

./: .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: Build-and-Publish.yaml  documentation.yaml
docs/: index.md
shankarlohar/: main.py
site/: index.html
