[tool.poetry]
name = "shankarlohar"
version = "0.1.3"
description = ""
authors = ["shankarlohar <inbox.shankarlohar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.0"


[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
