[tool.poetry]
name = "shankarlohar"
version = "0.0.dev0"
description = ""
authors = ["shankarlohar <inbox.shankarlohar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.0"


[tool.poetry.group.dev.dependencies]

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
